Update to v4 API.